--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h4>USA COVID-19 Data Visualization</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 												<button href="" class="button" style="background-color: #3e8abd;">Check it out</button>
 											</div>
