--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>USA COVID-19 Data Visualization</h4>
-												<p>How well is the USA handling the COVID-19 global pandemic compared to other countries? This is a data visualization project that uses d3.js, a very powerful JavaScript library for visualizing data with HTML, SVG and CSS.</p>
-												<button href="" class="button" style="background-color: #3e8abd;">Check it out</button>
+												<p>How well is the USA handling the COVID-19 global pandemic compared to other countries? This is a data visualization project that uses d3.js, a very powerful JavaScript library used for visualizing data with HTML, SVG and CSS.</p>
+												<button href="https://github.com/PRSDhakal/usa-covid-datavisualization/" target="_blank" class="button" style="background-color: #3e8abd;">Check it out</button>
 											</div>
 										</article>
 										<article>
