added image to accomplishment

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<p>These projects showcase wide variety of technologies and skills I have acquired</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/d3.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>USA COVID-19 Data Visualization</h4>
 												<p>How well is the USA handling the COVID-19 global pandemic compared to other countries? This is a data visualization project that uses d3.js, a very powerful JavaScript library used for visualizing data with HTML, SVG and CSS.</p>
