--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 									<h3>My Skillset</h3>
 									<p>I have been developing for the past five years and most of my prized projects were built as my university projects. </p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-code">HTML/CSS/JavaScript</li>
+										<li class="icon solid fa-cubes">React.js/Node.js/Express.js</li>
+										<li class="icon solid fa-book">Python/Jupyter Notebook</li>
+										<li class="icon solid fa-coffee">MySQL</li>
+										<li class="icon solid fa-bolt">C++/SFML</li>
+										<li class="icon solid fa-users">Data Visualization</li>
 									</ul>
 								</div>
 							</section>
