--- a/index.html
+++ b/index.html
@@ -92,16 +92,21 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>TourBy</h4>
+												<p>A webapp that allows prospective tourists to find local guides in St.
+													John’s. Developed as a project work for a web development course. It
+													uses PHP and MySQL to handle the server and the database.</p>
 												<button href="" class="button" style="background-color: #3e8abd;">Check it out</button>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>EggHead</h4>
+												<p>A 2D platformer game written in JavaScript that uses React.js for client
+													side and Express.js for server side. Developed for a final year game
+													programming project with four other team members.
+													</p>
 												<button href="" class="button" style="background-color: #3e8abd;">Check it out</button>
 											</div>
 										</article>
@@ -110,7 +115,7 @@
 							</section>
 
 						<!-- Four -->
-							<section id="four">
+							<!-- <section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -129,7 +134,7 @@
 										</div>
 									</form>
 								</div>
-							</section>
+							</section> -->
 
 
 					</div>
