--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<p>These projects showcase wide variety of technologies and skills I have acquired</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/d3.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/d3.jpg" width="500" height="600" alt="" /></a>
 											<div class="inner">
 												<h4>USA COVID-19 Data Visualization</h4>
 												<p>How well is the USA handling the COVID-19 global pandemic compared to other countries? This is a data visualization project that uses d3.js, a very powerful JavaScript library used for visualizing data with HTML, SVG and CSS.</p>
@@ -96,7 +96,7 @@
 												<p>A webapp that allows prospective tourists to find local guides in St.
 													John’s. Developed as a project work for a web development course. It
 													uses PHP and MySQL to handle the server and the database.</p>
-												<button onclick="https://github.com/PRSDhakal/Tour-by" class="button" style="background-color: #3e8abd;">Check it out</button>
+												<button onclick="https://github.com/PRSDhakal/Tour-by" target="_blank" class="button" style="background-color: #3e8abd;">Check it out</button>
 											</div>
 										</article>
 										<article>
@@ -107,7 +107,7 @@
 													side and Express.js for server side. Developed for a final year game
 													programming project with four other team members.
 													</p>
-												<button onclick="https://github.com/PRSDhakal/COMP4770" class="button" style="background-color: #3e8abd;">Check it out</button>
+												<button onclick="https://github.com/PRSDhakal/COMP4770" class="button" target="_blank" style="background-color: #3e8abd;">Check it out</button>
 											</div>
 										</article>
 									</div>
