--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 												<h4>USA COVID-19 Data Visualization</h4>
 												<p>How well is the USA handling the COVID-19 global pandemic compared to other countries? This is a data visualization project that uses d3.js, a very powerful JavaScript library used for visualizing data with HTML, SVG and CSS.</p>
 												<button onclick="https://github.com/PRSDhakal/usa-covid-datavisualization/" target="_blank" class="button" style="background-color: #3e8abd;">Check it out</button>
+												<form action="https://github.com/PRSDhakal/usa-covid-datavisualization/">
+													<input style="background-color: #3e8abd;" type="submit" value="Check it out" />
+												</form>
 											</div>
 										</article>
 										<article>
