--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 											<div class="inner">
 												<h4>USA COVID-19 Data Visualization</h4>
 												<p>How well is the USA handling the COVID-19 global pandemic compared to other countries? This is a data visualization project that uses d3.js, a very powerful JavaScript library used for visualizing data with HTML, SVG and CSS.</p>
-												<button onclick="https://github.com/PRSDhakal/usa-covid-datavisualization/" target="_blank" class="button" style="background-color: #3e8abd;">Check it out</button>
 												<form action="https://github.com/PRSDhakal/usa-covid-datavisualization/">
 													<input style="background-color: #3e8abd;" type="submit" value="Check it out" />
 												</form>
@@ -99,7 +98,10 @@
 												<p>A webapp that allows prospective tourists to find local guides in St.
 													John’s. Developed as a project work for a web development course. It
 													uses PHP and MySQL to handle the server and the database.</p>
-												<button onclick="https://github.com/PRSDhakal/Tour-by" target="_blank" class="button" style="background-color: #3e8abd;">Check it out</button>
+									
+												<form action="https://github.com/PRSDhakal/Tour-by">
+													<input style="background-color: #3e8abd;" type="submit" value="Check it out" />
+												</form>
 											</div>
 										</article>
 										<article>
@@ -110,7 +112,10 @@
 													side and Express.js for server side. Developed for a final year game
 													programming project with four other team members.
 													</p>
-												<button onclick="https://github.com/PRSDhakal/COMP4770" class="button" target="_blank" style="background-color: #3e8abd;">Check it out</button>
+												
+												<form action="https://github.com/PRSDhakal/COMP4770">
+													<input style="background-color: #3e8abd;" type="submit" value="Check it out" />
+												</form>
 											</div>
 										</article>
 									</div>
