--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 												<h4>EggHead</h4>
 												<p>A 2D platformer game written in JavaScript that uses React.js for client
 													side and Express.js for server side. Developed for a final year game
-													programming project with four other team members.
+													programming project with four other team members. This project is set to a private git repository. Please let me know if you want to have a look at the source code.
 													</p>
 												
-												<form action="https://github.com/PRSDhakal/COMP4770">
-													<input style="background-color: #3e8abd;" type="submit" value="Check it out" />
+												<form action="https://www.youtube.com/watch?v=P31PufGttmQ&t=12s">
+													<input style="background-color: #3e8abd;" type="submit" value="Check out the gameplay" />
 												</form>
 											</div>
 										</article>
