updated egghead youtube link

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 													programming project with four other team members. This project is set to a private git repository. Please let me know if you want to have a look at the source code.
 													</p>
 												
-												<form action="https://www.youtube.com/watch?v=P31PufGttmQ&t=12s">
+												<form action="https://youtu.be/P31PufGttmQ">
 													<input style="background-color: #3e8abd;" type="submit" value="Check out the gameplay" />
 												</form>
 											</div>
