Egghead demo link added

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 													programming project with four other team members. This project is set to a private git repository. Please let me know if you want to have a look at the source code.
 													</p>
 												
-												<form action="https://youtu.be/P31PufGttmQ">
-													<input style="background-color: #3e8abd;" type="submit" value="Check out the gameplay" />
+												<form action="https://bit.ly/3qYtEXZ">
+													<input style="background-color: #3e8abd;" type="submit" value="Check it out" />
 												</form>
 											</div>
 										</article>
