added egghead display picture

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/egghead.png" alt="" /></a>
 											<div class="inner">
 												<h4>EggHead</h4>
 												<p>A 2D platformer game written in JavaScript that uses React.js for client
